fixes horizontal overflow

--- a/src/app/project-cards/project-cards.component.css
+++ b/src/app/project-cards/project-cards.component.css
@@ -18,7 +18,7 @@
 
 @media (width <= 576px) {
     .card {
-        max-width: 100vw;
-        min-width: unset;
+        width: 90svw;
+        max-width: unset;
     }
 }
